--- a/EasyPagesIo/www/templates/tab-chats.html
+++ b/EasyPagesIo/www/templates/tab-chats.html
@@ -10,7 +10,10 @@
         <ion-option-button class="button-assertive" ng-click="remove(chat)">
           Delete
         </ion-option-button>
+        <ion-tabs>
+        </ion-tabs>
       </ion-item>
+
     </ion-list>
   </ion-content>
 </ion-view>
