CORS problems! Can't download the package

--- a/EasyPagesIo/www/app/components/auth/authlogin.html
+++ b/EasyPagesIo/www/app/components/auth/authlogin.html
@@ -7,10 +7,10 @@
         <div id="login_div" class="padding">
             <div class="list list-inset">
                 <label class="item item-input">
-              <input type="text" placeholder="Username" ng-model="data.username">
+              <input type="text" placeholder="E-Mail" ng-model="loginData.email">
           </label>
                 <label class="item item-input">
-              <input type="password" placeholder="Password" ng-model="data.password">
+              <input type="password" placeholder="Password" ng-model="loginData.password">
           </label>
             </div>
             <button class="button button-block button-positive" ng-click="login()" style="font-size: 14pt">Log In</button>
