--- a/EasyPagesIo/www/templates/tabs.html
+++ b/EasyPagesIo/www/templates/tabs.html
@@ -12,11 +12,11 @@ navigation history that also transitions its views in and out.
 
   <!-- Chats Tab -->
   <ion-tab title="Explore" icon-off="ion-ios-search" icon-on="ion-ios-search-strong" href="#/tab/explore">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+    <ion-nav-view name="tab-explore"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/account">
+  <ion-tab title="Account" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/login">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
