--- a/EasyPagesIo/www/app/components/auth/authreg.html
+++ b/EasyPagesIo/www/app/components/auth/authreg.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Sign Up" name="login-view">
+<ion-view view-title="Sign Up" name="register-view">
     <ion-content scroll="false">
 
 
@@ -14,7 +14,7 @@
         
 
             </div>
-            <button class="button button-block button-positive" ng-click="login()" style="font-size: 14pt">Sign Up</button>
+            <button class="button button-block button-positive" ng-click="register()" style="font-size: 14pt">Sign Up</button>
         </div>
 
 
