--- a/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
+++ b/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
@@ -18,7 +18,7 @@
     <!--a button to display/hide -->
     <span>Total reviews: <br><h2>{{userprofile.nrreviews}}</h2> <span>Show All</span></span>
 
-    <div ng-repeat="review in usercompany.profilereviews">
-    A service
+    <div ng-repeat="review in userprofile.profilereviews">
+    A review
     </div>
 </div>
