--- a/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
+++ b/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
@@ -19,6 +19,6 @@
     <span>Total reviews: <br><h2>{{userprofile.nrreviews}}</h2> <span>Show All</span></span>
 
     <div ng-repeat="review in userprofile.profilereviews">
-    A review
+    <a ng-href="#/tab/reviews/{{review.review_id}}">A review</a>
     </div>
 </div>
