nothing but a fail

--- a/EasyPagesIo/www/app/components/account/account.html
+++ b/EasyPagesIo/www/app/components/account/account.html
@@ -7,8 +7,11 @@
         <br> Type: {{usertype}}
         <br> Since: {{user.created_at}}
       </ion-item>
+      <ion-item class="item-divider">
+        <h2>{{moduleTitle}}<a style="float: right" ng-href="#/tab/accountinit">EDIT</a></h2>
+      </ion-item>
       <ion-item>
-        <h2>{{moduleTitle}}</h2>
+        
         <!--<span ng-click="moduleDisplay = true" ng-hide="moduleDisplay">Show</span>
         <span ng-click="moduleDisplay = false" ng-show="moduleDisplay">Hide</span>
         <div ng-show="moduleDisplay">-->
