--- a/EasyPagesIo/www/assets/css/style.css
+++ b/EasyPagesIo/www/assets/css/style.css
@@ -1,1 +1,9 @@
 /* Empty. Add your own CSS if you like */
+
+/* to disable the datepicker dropdown */
+input::-webkit-calendar-picker-indicator{
+    display: none;
+}
+input[type="date"]::-webkit-input-placeholder{ 
+    visibility: hidden !important;
+}
