testing front-end

--- a/EasyPagesIo/www/app/components/service/serv-detail.html
+++ b/EasyPagesIo/www/app/components/service/serv-detail.html
@@ -49,8 +49,9 @@
 
         <h3>{{review.title}}</h3>
         <p>{{review.description}}</p>
+        <button ng-click="removeReview(review.review_id)">DELETE</button>
       </ion-item>
-      <ion-list>
+      </ion-list>
 
   </ion-content>
 </ion-view>
