--- a/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
+++ b/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
@@ -7,7 +7,7 @@
         {{userprofile.profile.lname}}
     </h2></span>
     <br>
-    <span>Description: <br><h2>{{userprofile.profile.dob}}</h2></span>
+    <span>Date of Birth: <br><h2>{{userprofile.profile.dob}}</h2></span>
     
     <br>
     YOUR REVIEWS
