--- a/EasyPagesIo/www/app/components/review/review-detail.html
+++ b/EasyPagesIo/www/app/components/review/review-detail.html
@@ -1,12 +1,15 @@
 <ion-view view-title="Review">
   <ion-content class="padding">
-
+{{review}}
     <div>
       <h1>
         {{review.title}}
       </h1>
       <h5>
-        {{review.rating}}
+        Rating: {{review.rating}}
+      </h5>
+      <h5>
+        Description:
       </h5>
       <p>
         {{review.description}}
