--- a/EasyPagesIo/www/app/components/account/companystuff/companypane.html
+++ b/EasyPagesIo/www/app/components/account/companystuff/companypane.html
@@ -2,9 +2,7 @@
     uses {{usercompany}}
 
     -->
-<div>
-    <br>
-    <br>
+<ion-item>
     <span>Company name: <br><h2>{{usercompany.company.name}}</h2></span>
     <br>
     <span>Description: <br><h2>{{usercompany.company.description}}</h2></span>
@@ -12,9 +10,13 @@
     <span>Website: <br><h2>{{usercompany.company.website}}</h2></span>
     <br>
     <!--a button to display/hide -->
-    <span>NrOfServices: <br><h2>{{usercompany.nrservices}}</h2> <span>Show All</span></span>
-
+</ion-item>
+<ion-item class="item-divider">
+    <h2>Your services: {{usercompany.nrservices}}
+        <a style="float: right">ADD NEW</a></h2>
+</ion-item>
+<ion-item>
     <div ng-repeat="service in usercompany.companyservices">
-    <a href="#/tab/services/{{service.service_id}}">{{service.title}}</a>
+        <a href="#/tab/services/{{service.service_id}}">{{service.title}}</a>
     </div>
-</div>
+</ion-item>
