--- a/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
+++ b/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
@@ -1,8 +1,8 @@
 <!--
     uses {{userprofile}}
 -->
-<div>
-    <span>Company name: <br>
+<ion-item>
+    <span>Name: <br>
     <h2>{{userprofile.profile.fname}}
         {{userprofile.profile.lname}}
     </h2></span>
@@ -10,12 +10,14 @@
     <span>Date of Birth: <br><h2>{{userprofile.profile.dob}}</h2></span>
     
     <br>
-    YOUR REVIEWS
-    <br>
     <!--a button to display/hide -->
-    <span>Total reviews: <br><h2>{{userprofile.nrreviews}}</h2> <span>Show All</span></span>
-
+</ion-item>
+<ion-item class="item-divider">
+    <h2>Your reviews: {{userprofile.nrreviews}}
+        <!--<a style="float: right">ADD NEW</a></h2>-->
+</ion-item>
+<ion-item>
     <div ng-repeat="review in userprofile.profilereviews">
     <a ng-href="#/tab/reviews/{{review.review_id}}">A review</a>
     </div>
-</div>
+</ion-item>
