fixed gandalf bug

--- a/EasyPagesIo/www/app/components/account/account.html
+++ b/EasyPagesIo/www/app/components/account/account.html
@@ -5,8 +5,7 @@
         <h2>{{user.username}}<a style="float: right" ng-click="logout()">LOG OUT</a></h2>
       </ion-item>
       <ion-item>
-       
-        <hr/> Email: {{user.email}}
+        Email: {{user.email}}
         <br> Type: {{usertype}}
         <br> Since: {{user.created_at}}
       </ion-item>
