--- a/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
+++ b/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
@@ -1,6 +1,7 @@
 <!--
     uses {{userprofile}}
 -->
+{{userprofile.profile}}
 <ion-item>
     <span>Name: <br>
     <h2>{{userprofile.profile.fname}}
@@ -8,16 +9,20 @@
     </h2></span>
     <br>
     <span>Date of Birth: <br><h2>{{userprofile.profile.dob}}</h2></span>
-    
+
     <br>
     <!--a button to display/hide -->
 </ion-item>
 <ion-item class="item-divider">
-    <h2>Your reviews: {{userprofile.nrreviews}}
+    <h2>Your reviews: 
         <!--<a style="float: right">ADD NEW</a></h2>-->
 </ion-item>
 <ion-item>
-    <div ng-repeat="review in userprofile.profilereviews">
-    <a ng-href="#/tab/reviews/{{review.review_id}}">A review</a>
-    </div>
+    <table style="width: 100%">
+        <tr ng-repeat="review in userprofile.profilereviews" >
+            <td><a ng-href="#/tab/reviews/{{review.review_id}}">A review</a></td>
+            <td style="text-align: right">EDIT</td>
+            <td style="text-align: right"><a ng-click="removeReview({{review.review_id}})">DELETE</a></td>
+        </tr>
+    </table>
 </ion-item>
