--- a/EasyPagesIo/www/app/components/account/account.html
+++ b/EasyPagesIo/www/app/components/account/account.html
@@ -10,7 +10,9 @@
         <br> Since: {{user.created_at}}
       </ion-item>
       <ion-item class="item-divider">
-        <h2>{{moduleTitle}}<a style="float: right" ng-href="#/tab/accountinit">EDIT</a></h2>
+        <h2>{{moduleTitle}}
+          <!--<a style="float: right" ng-href="#/tab/accountinit">EDIT</a>-->
+          </h2>
       </ion-item>
       
         
