--- a/EasyPagesIo/www/app/components/account/setup/profilesetup/exprofilesetupmod.html
+++ b/EasyPagesIo/www/app/components/account/setup/profilesetup/exprofilesetupmod.html
@@ -18,7 +18,7 @@
                    {{profile.dob}} <br>
                  </label>
                 <label class="item item-input">  
-              <input type="date" ng-model="data.dob"><span ng-hide="passMatch">
+              <input type="date" ng-model="data.dob">
           </label>
                 
                     <label class="item item-divider padding">
