--- a/EasyPagesIo/www/app/components/account/setup/profilesetup/profilesetupmod.html
+++ b/EasyPagesIo/www/app/components/account/setup/profilesetup/profilesetupmod.html
@@ -15,7 +15,7 @@
                    Date of Birth:
                  </label>
                 <label class="item item-input">  
-              <input type="date" ng-model="data.dob"><span ng-hide="passMatch">
+              <input type="date" ng-model="data.dob">
           </label>
                 
                     <label class="item item-divider padding">
