--- a/EasyPagesIo/www/app/components/account/setup/companysetup/companysetupmod.html
+++ b/EasyPagesIo/www/app/components/account/setup/companysetup/companysetupmod.html
@@ -8,7 +8,7 @@
                  </label>
             <label class="item item-input">
                    <br>
-              <input type="text" placeholder="New Title" ng-model="data.title">
+              <input type="text" placeholder="New Name" ng-model="data.name">
           </label>
             <ion-item>
                 
