--- a/EasyPagesIo/www/app/components/review/newreview/forprofiles/templ.html
+++ b/EasyPagesIo/www/app/components/review/newreview/forprofiles/templ.html
@@ -8,7 +8,7 @@
             <!--<input type="number" ng-model="rvw.rating" min="0" max="10" placeholder="0-10">-->
           </label>
       <div class="item item-input">
-        <rating ng-model="rvw.rate" max="5"></rating>
+        <rating ng-model="rvw.rating" max="5"></rating>
       </div>
       <label class="item item-stacked-label">
             <span class="input-label">Title</span>
