--- a/EasyPagesIo/www/app/components/dashboard/tab-dash.html
+++ b/EasyPagesIo/www/app/components/dashboard/tab-dash.html
@@ -2,9 +2,33 @@
   <ion-content>
 
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()"></ion-refresher>
+      
+      <div class="bar bar-header item-input-inset">
+            <label class="item-input-wrapper">
+   <i class="icon ion-ios-search-strong placeholder-icon"></i>
+   <input type="search"
+          placeholder="Search"
+          ng-model="search.string"
+          ng-keydown="showCancel=true">
+    <a ng-show="showCancel" 
+       on-touch="search.string=''; showCancel = false;">
+       <i class="icon ion-ios-close-outline placeholder-icon"></i>
+    </a>
+</label>
+
+        </div>
+
+        <div class="button-bar item-divider">
+            <br>
+                <button ng-click="orderByMe('title')">Title</button>
+                <button ng-click="orderByMe('description')">Description</button>
+                <button ng-click="orderByMe('updated_at')">Oldest</button>
+                <button ng-click="orderByMe('relcompany.name')">Company name</button>
+            <br>            
+        </div>
 
     <ion-list>
-      <ion-item class="item-animate item-icon-right" ng-repeat="service in srvces" type="item-text-wrap" href="#/tab/services/{{service.service_id}}">
+      <ion-item class="item-animate item-icon-right" ng-repeat="service in srvces | filter : search.string | orderBy:myOrderBy" type="item-text-wrap" href="#/tab/services/{{service.service_id}}">
 
         <h2>{{service.title}}</h2>
         <h3>{{service.relcompany.name}}. ${{service.price}}</h3>
@@ -16,15 +40,15 @@
           </ion-item>
         </ion-list>
         <i class="icon ion-chevron-right icon-accessory"></i>
-
       </ion-item>
+        </ion-list>
       <ion-list>
 
         <ion-infinite-scroll 
           icon="ion-loading-c" 
           on-infinite="loadMoreData()">
         </ion-infinite-scroll>
-
+        </ion-list>
 
   </ion-content>
 </ion-view>
