--- a/EasyPagesIo/www/app/components/dashboard/tab-dash.html
+++ b/EasyPagesIo/www/app/components/dashboard/tab-dash.html
@@ -28,7 +28,9 @@
         </div>
 
     <ion-list>
-      <ion-item class="item-animate item-icon-right" ng-repeat="service in srvces | filter : search.string | orderBy:myOrderBy" type="item-text-wrap" href="#/tab/services/{{service.service_id}}">
+      <ion-item class="item-animate item-icon-right" 
+      ng-repeat="service in srvces | filter : search.string | orderBy:myOrderBy" 
+      type="item-text-wrap" href="#/tab/services/{{service.service_id}}">
 
         <h2>{{service.title}}</h2>
         <h3>{{service.relcompany.name}}. ${{service.price}}</h3>
