picturies for public thingies

--- a/EasyPagesIo/www/app/components/profile/profilepublic.html
+++ b/EasyPagesIo/www/app/components/profile/profilepublic.html
@@ -3,7 +3,7 @@
     <ion-list>
       <!--{{profile}}-->
       <ion-item class="item item-thumbnail-left">
-        <img src="assets/img/dprofpics/person-flat.png"></img>
+        <img src="{{profilepicurl}}"></img>
         <h1>{{profile.fname}} {{profile.lname}}</h1>
         Date of Birth: {{profile.dob}}<br>
 
