--- a/EasyPagesIo/www/app/components/review/review-detail.html
+++ b/EasyPagesIo/www/app/components/review/review-detail.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Review">
   <ion-content class="padding">
     <div>
-      <ion-item class="item-icon-left" ng-href="#/tab/profiles/{{review.profile_id}}">
+      <ion-item class="item-icon-right " ng-href="#/tab/profiles/{{review.profile_id}}">
         <i class="icon ion-android-person"></i>
       By: {{review.relprofile.fname}}  {{review.relprofile.lname}}
       </ion-item>
