--- a/EasyPagesIo/www/app/components/profile/profilepublic.html
+++ b/EasyPagesIo/www/app/components/profile/profilepublic.html
@@ -1,4 +1,4 @@
-<ion-view view-title="profile.user.username">
+<ion-view view-title="{{profile.userdata.username}}">
   <ion-content class="padding">
     <ion-list>
       <!--{{profile}}-->
