--- a/EasyPagesIo/www/app/components/company/companypublic.html
+++ b/EasyPagesIo/www/app/components/company/companypublic.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Company">
   <ion-content class="padding">
+
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()">
+
+    </ion-refresher>
+    
     <ion-list>
       <!--{{company}}-->
       <ion-item>
@@ -17,7 +22,8 @@
       <ion-list>
         <ion-item ng-repeat="service in company.companyservices" class ="item-icon-right"
           ng-href="#/tab/services/{{service.service_id}}">
-          {{service.title}}
+          {{service.title}}<br>
+          Member price: ${{service.price}}
           <i class="icon ion-chevron-right icon-accessory"></i>
         </ion-item>
       </ion-list>
