--- a/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
+++ b/EasyPagesIo/www/app/components/account/profilestuff/profilepane.html
@@ -4,27 +4,39 @@
 {{userprofile.profilereviews}}
 -->
 <ion-item>
-    <span>Name: <br>
+	<span>Name: <br>
     <h2>{{userprofile.profile.fname}}
         {{userprofile.profile.lname}}
     </h2></span>
-    <br>
-    <span>Date of Birth: <br><h2>{{userprofile.profile.dob}}</h2></span>
+	<br>
+	<span>Date of Birth: <br><h2>{{userprofile.profile.dob}}</h2></span>
 
-    <br>
-    <!--a button to display/hide -->
+	<br>
+	<!--a button to display/hide -->
 </ion-item>
 <ion-item class="item-divider">
-    <h2>Your reviews:
-        <!--<a style="float: right">ADD NEW</a></h2>-->
+	<h2>Your reviews:</h2>
+	<!--<a style="float: right">ADD NEW</a></h2>-->
 </ion-item>
-<ion-item>
-    <table style="width: 100%">
-        <tr ng-repeat="review in userprofile.profilereviews">
-            <td><a ng-href="#/tab/reviews/{{review.review_id}}">{{review.title}}</a>
-            </td>
-            <td style="text-align: right">EDIT</td>
-            <td style="text-align: right"><a ng-click="removeReview({{review.review_id}})">DELETE</a></td>
-        </tr>
-    </table>
-</ion-item>
+
+<ion-list>
+	<ion-item class="item-remove-animate item-icon-right" ng-repeat="review in userprofile.profilereviews" href="#/tab/reviews/{{review.review_id}}">
+		<h2>{{review.title}}</h2>
+		<i class="icon ion-chevron-right icon-accessory"></i>
+		<ion-option-button class="button-assertive" ng-click="removeReview({{review.review_id}})">
+			Delete
+		</ion-option-button>
+	</ion-item>
+
+</ion-list>
+<!--
+<ion-item class="item">
+	<table style="width: 100%">
+		<tr ng-repeat="review in userprofile.profilereviews">
+			<td><a ng-href="#/tab/reviews/{{review.review_id}}">{{review.title}}</a>
+			</td>
+			<!--<td style="text-align: right">EDIT</td>- ->
+			<td style="text-align: right"><a ng-click="removeReview({{review.review_id}})">DELETE</a></td>
+		</tr>
+	</table>
+</ion-item>-->
