--- a/EasyPagesIo/www/app/components/review/review-detail.html
+++ b/EasyPagesIo/www/app/components/review/review-detail.html
@@ -5,7 +5,7 @@
         <i class="icon ion-android-person"></i>
       By: {{review.relprofile.fname}}  {{review.relprofile.lname}}
       </ion-item>
-      <ion-intem class="item">
+      <ion-item class="item">
       <h1>
         {{review.title}}
       </h1>
@@ -18,13 +18,12 @@
       </h2>
       
         {{review.description}}
-
-    </div>
     </ion-item>
-    <div class="item-divider" >
-      <span ng-click="commenttab = !commenttab" style="cursor: pointer"  class="padding-left">Add comment | {{reviewtab}}</span>
-      <span ng-click="" style="float: right" class="padding-right">Save</span>
     </div>
+    <a class="item item-divider" >
+      <span ng-click="commenttab = !commenttab" style="cursor: pointer"  class="padding-left">Add comment</span>
+      <!--<span ng-click="" style="float: right" class="padding-right">Save</span>-->
+    </a>
     <ion-item ng-show="commenttab">
       <form id="newcomment" ng-submit="addComment(cmmnt)">
         <div class="list">
