--- a/EasyPagesIo/www/app/components/service/serv-detail.html
+++ b/EasyPagesIo/www/app/components/service/serv-detail.html
@@ -1,70 +1,44 @@
 <ion-view view-title="Overview">
-  <ion-content class="padding">
+	<ion-content class="padding">
 
-    <div>
-      <h1>
-        {{serv.title}}
-      </h1>
-      <h4>
-        By:
-        <a href="#/tab/companies/{{serv.company_id}}">{{serv.relcompany.name}}</a>
-      </h4>
-      <h5>
-        Price for members:
-        ${{serv.price}}
-      </h5>
-      Description:
-      <p>
-        {{serv.description}}
-      </p>
-    </div>
-    <ion-item class="item-divider item-stable" href="#/tab/reviews/publish/{{srvID}}">
-        Add review | GO
-    </ion-item>
-    <!--
-    <ion-item ng-show="reviewtab">
-      <form id="newreview" ng-submit="createReview(rvw)">
-        <div class="list">
-          <label class="item item-input">
-            <span class="input-label">Rating</span>
-            <input type="number" ng-model="rvw.rating" min="0" max="10" placeholder="0-10">
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Title</span>
-            <input type="text" placeholder="Give your impression a name." ng-model="rvw.title">
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Description</span>
-            <!--<input type="text" placeholder="Give impression a name." ng-model="task.title"> - ->
-            <textarea ng-model="rvw.description" form="newreview"  placeholder="Is there something else you'd like to share?'">
+		<ion-item class="item-icon-right " ng-href="#/tab/companies/{{serv.company_id}}">
+			<i class="icon ion-coffee"></i> By: {{serv.relcompany.name}}
+		</ion-item>
+		<ion-item class="item">
+			<h1>
+				{{serv.title}}
+			</h1>
 
-            </textarea>
-          </label>
-        </div>
-        <div class="padding">
-          <button type="submit" class="button button-block button-calm">Publish</button>
-        </div>
-      </form>
-    </ion-item>
-    -->
-    <hr>
+			<h2>
+				Price for members: ${{serv.price}}
+			</h2>
+			<h2>
+				Description:
+			</h2>
+
+			{{serv.description}}
+
+		</ion-item>
+		<a class="item  item-divider" href="#/tab/reviews/publish/{{srvID}}">
+			Add review
+		</a>
 
 
 
-    <ion-list>
-      <ion-item class="item-remove-animate item-icon-right" 
-        ng-repeat="review in reviews" 
-        type="item-text-wrap" 
-        href="#/tab/reviews/{{review.review_id}}">
-        <div >
-          <h3>{{review.relprofile.fname}} {{review.relprofile.lname}}</h3>
-          <hr/>
-          <h3>{{review.title}}<span style="float: right">Rating: {{review.rating}}</span></h3>
-          <p>{{review.description}}</p>
-        </div>
-        <!-- <button ng-click="removeReview(review.review_id)">DELETE</button>     -->
-      </ion-item>
-    </ion-list>
+		<div class="card list" ng-repeat="review in reviews" type="item-text-wrap">
+			<a class="item item-animate item-avatar item-icon-right" ng-href="#/tab/reviews/{{review.review_id}}">
+        <img ng-src="{{review.defPic}}">
+				<h2>{{review.relprofile.fname}} {{review.relprofile.lname}}:</h2>
+        <h2><b>{{review.title}}.</b></h2>
+        <i class="icon ion-chevron-right icon-accessory"></i>
+			</a>
+			<div class="item-body">
+        Rating: <b>{{review.rating}}</b><br>
+			{{review.description}}
+			</div>
+			<!-- <button ng-click="removeReview(review.review_id)">DELETE</button>     -->
 
-  </ion-content>
+		</div>
+
+	</ion-content>
 </ion-view>
