--- a/EasyPagesIo/www/app/components/review/review-detail.html
+++ b/EasyPagesIo/www/app/components/review/review-detail.html
@@ -1,9 +1,11 @@
 <ion-view view-title="Review">
   <ion-content class="padding">
+     <!--{{review}}-->
     <div>
       <ion-item class="item-icon-right " ng-href="#/tab/profiles/{{review.profile_id}}">
         <i class="icon ion-android-person"></i>
       By: {{review.relprofile.fname}}  {{review.relprofile.lname}}
+      <p>For {{review.relservice.title}}</p>
       </ion-item>
       <ion-item class="item">
       <h1>
