average rating in the dash

--- a/EasyPagesIo/www/app/components/dashboard/tab-dash.html
+++ b/EasyPagesIo/www/app/components/dashboard/tab-dash.html
@@ -34,7 +34,7 @@
 				<a ng-href="#/tab/services/{{service.service_id}}" class="item item-icon-left item-icon-right">
 					<i class="icon ion-pricetag dark"></i>
 					<h2>{{service.title}}</h2>
-					<p>Price: ${{service.price}}<br>Average Rating: 7</p>
+					<p>Price: ${{service.price}}<br>Average Rating: {{service.avrating}}</p>
 					<i class="icon ion-chevron-right icon-accessory"></i>
 				</a>
 
