A bit of adjustments for companies

--- a/EasyPagesIo/www/app/components/account/companystuff/companypane.html
+++ b/EasyPagesIo/www/app/components/account/companystuff/companypane.html
@@ -9,6 +9,8 @@
     <br>
     <span>Website: <br><h2>{{usercompany.company.website}}</h2></span>
     <br>
+    <!--<span>Phone: <br><h2>{{usercompany.company.phone}}</h2></span>
+    <br>-->
     <!--a button to display/hide -->
 </ion-item>
 <ion-item class="item-divider">
