--- a/EasyPagesIo/www/app/components/account/setup/companysetup/companysetupmod.html
+++ b/EasyPagesIo/www/app/components/account/setup/companysetup/companysetupmod.html
@@ -21,5 +21,10 @@
            
               <input type="text" placeholder="New Web Address" ng-model="data.website">
           </label>
+          <!--<label class="item item-input">
+                    <br>
+           
+              <input type="text" placeholder="New Phone" ng-model="data.phone">
+          </label>-->
             <!-- to be loaded from the module -->
             <button class="button button-block button-positive" ng-click="initializeCompany(data)" style="font-size: 14pt">Continue</button>
