some workaround for reviews

--- a/EasyPagesIo/www/app/components/service/serv-detail.html
+++ b/EasyPagesIo/www/app/components/service/serv-detail.html
@@ -19,9 +19,10 @@
 			{{serv.description}}
 
 		</ion-item>
-		<a class="item  item-divider" href="#/tab/reviews/publish/{{srvID}}">
+		<ng-include src="revmdl"> </ng-include>
+		<!--<a class="item  item-divider" href="#/tab/reviews/publish/{{srvID}}">
 			Add review
-		</a>
+		</a>-->
 
 
 
